[gd_scene load_steps=7 format=3 uid="uid://dy76tyh7qhqtx"]

[ext_resource type="Texture2D" uid="uid://bhy1mhuq81hha" path="res://textures/panel_brown.png" id="1_n87rw"]
[ext_resource type="Script" uid="uid://bl637e5v8i7qa" path="res://scrpits/pause_menu.gd" id="1_v4r4p"]
[ext_resource type="Texture2D" uid="uid://c56jb48j5j6a2" path="res://textures/—Pngtree—exit close button for game_6655002 (1).png" id="2_myx47"]
[ext_resource type="Texture2D" uid="uid://dm3m428t133pf" path="res://textures/vecteezy_speaker-green-and-red-symbol-icon-set-sound-vector-icon_15416079-removebg-preview.png" id="3_kukqi"]
[ext_resource type="Texture2D" uid="uid://4k0q5tvj6pe8" path="res://textures/button_credits.png" id="4_7l7mv"]
[ext_resource type="Texture2D" uid="uid://bvhxymw7yehvv" path="res://textures/buttonLong_beige_pressed.png" id="6_v4r4p"]

[node name="pause_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v4r4p")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0

[node name="bg_panel" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -203.0
offset_top = -205.0
offset_right = -163.0
offset_bottom = -165.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(10, 10)
texture = ExtResource("1_n87rw")
expand_mode = 1

[node name="close" type="TextureRect" parent="CanvasLayer/bg_panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -4.40057
offset_top = -3.50021
offset_right = 95.5994
offset_bottom = 96.4998
grow_horizontal = 0
scale = Vector2(0.08, 0.08)
texture = ExtResource("2_myx47")

[node name="close_button" type="Button" parent="CanvasLayer/bg_panel/close"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 49.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="muteUnmuteButton" type="TextureRect" parent="CanvasLayer/bg_panel"]
layout_mode = 1
offset_top = 0.600021
offset_right = 80.0
offset_bottom = 41.6
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_kukqi")
expand_mode = 1

[node name="unmuteButton" type="Button" parent="CanvasLayer/bg_panel/muteUnmuteButton"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 9.0
offset_top = -12.5
offset_right = 36.0
offset_bottom = 16.5
grow_vertical = 2
flat = true

[node name="muteButton" type="Button" parent="CanvasLayer/bg_panel/muteUnmuteButton"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -12.5
offset_right = -8.0
offset_bottom = 16.5
grow_horizontal = 0
grow_vertical = 2
flat = true

[node name="credits" type="TextureRect" parent="CanvasLayer/bg_panel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 2.6
offset_top = -4.2
offset_right = 182.6
offset_bottom = 61.8
grow_vertical = 2
scale = Vector2(0.075, 0.075)
texture = ExtResource("4_7l7mv")

[node name="creditsButton" type="Button" parent="CanvasLayer/bg_panel/credits"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 2.66667
offset_top = -31.6667
offset_right = 185.667
offset_bottom = 35.3333
grow_vertical = 2
flat = true

[node name="Button" type="Button" parent="CanvasLayer/bg_panel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = -9.0
offset_right = 65.0
offset_bottom = 26.0
grow_vertical = 0
scale = Vector2(0.13, 0.13)
text = "Home"

[node name="creditsTexts" type="Control" parent="CanvasLayer/bg_panel"]
visible = false
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -6.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/bg_panel/creditsTexts"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -5.0
offset_right = -25.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.5, 2.5)
texture = ExtResource("6_v4r4p")
expand_mode = 1

[node name="Label" type="Label" parent="CanvasLayer/bg_panel/creditsTexts"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -3.0
offset_top = -5.0
offset_right = 385.0
offset_bottom = 158.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.105, 0.105)
text = "Stickman: sifrani (https://sketchfab.com/sifrani)
UI Assets: Kenney
Music: Dan Knoflicek, yd(OpenGameArt)
 Sussy Imposter:  J-Toastie[CC-BY] via Poly Pizza
Alien: Poly by Google [CC-BY] via Poly Pizza
Alien Animal: Kavinda.Attanayake"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="CanvasLayer/bg_panel/close/close_button" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="CanvasLayer/bg_panel/muteUnmuteButton/unmuteButton" to="." method="_on_unmute_button_pressed"]
[connection signal="pressed" from="CanvasLayer/bg_panel/muteUnmuteButton/muteButton" to="." method="_on_mute_button_pressed"]
[connection signal="pressed" from="CanvasLayer/bg_panel/credits/creditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="CanvasLayer/bg_panel/Button" to="." method="_on_button_pressed"]
